--- a/src/style.css
+++ b/src/style.css
@@ -79,6 +79,21 @@ form {
   width: 280px;
 }
 
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  color: rgb(173, 153, 181);
+}
+::-moz-placeholder { /* Firefox 19+ */
+  color: rgb(173, 153, 181);
+  opacity: 1;
+}
+:-ms-input-placeholder { /* IE 10+ */
+  color: rgb(173, 153, 181);
+}
+:-moz-placeholder { /* Firefox 18- */
+  color: rgb(173, 153, 181);
+  opacity: 1;
+}
+
 .submit-button {
   margin-left: 10px;
   background: #d680a8af;
