Adjust .submit-button layout

--- a/src/style.css
+++ b/src/style.css
@@ -96,8 +96,8 @@ form {
 
 .submit-button {
   margin-left: 10px;
-  background: #d680a8af;
-  color: white;
+  background: #a65bb14e;
+  color: #dfd3d8;
   border: none;
   width: 150px;
   font-size: 16px;
